# alphabet-burglar

./: README.md  dev.requirements.txt  pyproject.toml  tox.ini
alphabet_thief/: __init__.py  diacritics.py  utils.py
tests/: test_alphabet_thief.py
