[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alphabet_thief"
version = "0.0.1"
authors = [
    { name="Miyamae Yuichi", email="yuichi.miyamae.rna@gmail.com" },
]
description = "A tool for deleting Latin alphabets"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yuichi0625/alphabet-thief"
"Bug Tracker" = "https://github.com/yuichi0625/alphabet-thief/issues"
